# keyboard-firmware

./: .gitignore  AGENT.md  Cargo.toml  README.md  TASKS.md
archive/jolt/: .gdbinit  .gitignore  CMakeLists.txt  Kconfig
archive/jolt/bbqboards/boards/pimoroni/tiny_2040/: Kconfig.defconfig  board.yml  pimoroni_tiny_2040-pinctrl.dtsi
archive/jolt/bbqboards/boards/shields/highboard/: Kconfig.shield
archive/jolt/bbqboards/boards/shields/jolt1/: Kconfig.shield
archive/jolt/bbqboards/boards/shields/jolt2/: Kconfig.shield
archive/jolt/bbqboards/boards/shields/jolt2dir/: jolt2dir.overlay
archive/jolt/bbqboards/boards/shields/jolt3_mez_2040/: jolt3_mez_2040.overlay
archive/jolt/bbqboards/boards/shields/proto2/: Kconfig.shield  proto2.overlay
archive/jolt/bbqboards/boards/shields/proto3/: proto3.overlay
archive/jolt/bbqboards/dts/bindings/: gpio-mode-selector.yaml
archive/jolt/src/: devices.rs  dispatch.rs  leds.rs  lib.rs  matrix.rs  usb.c
archive/jolt/src/devices/: usb.rs
archive/jolt/src/leds/: led_strip.rs
bbq-consts/: Cargo.toml  gen.sh
bbq-consts/src/: main.rs
bbq-keyboard/: .gitignore  Cargo.toml  DESIGN.md  bbq-keyboard.code-workspace
bbq-keyboard/src/: boardinfo.rs  dict.rs  keys.rs  layout.rs  lib.rs  modifiers.rs  ser2.rs  serialize.rs  usb_typer.rs
bbq-keyboard/src/layout/: artsey.rs  qwerty.rs  steno.rs  taipo.rs
bbq-keyboard/tests/: taipo.rs
bbq-steno/: Cargo.toml  DESIGN.md
bbq-steno-macros/: Cargo.toml  DESIGN.md
bbq-steno-macros/src/: lib.rs
bbq-steno/src/: dict.rs  lib.rs  memdict.rs  replacements.rs  stroke.rs  typer.rs
bbq-steno/src/dict/: emily.rs  joiner.rs  lookup.rs  mapdict.rs  ortho.rs  translate.rs  typer.rs
bbq-steno/src/dict/emily/: consts.rs
bbq-steno/tests/: dict.rs  typer.rs
bbq-tool/: .gitignore  Cargo.toml  build.rs  dicts.sh  sides.sh
bbq-tool/src/: encode.rs  jsondict.rs  main.rs  rtfcre.rs
boot/: Cargo.toml  memory.x  run.sh  uf2.sh
boot/.cargo/: config.toml
boot/src/: main.rs
dict-cleanup/: Cargo.toml
dict-cleanup/src/: main.rs
dict-convert/: Cargo.toml  Makefile  bin2uf2.py  build.rs  program.sh
dict-convert/src/: main.rs  rtfcre.rs
dict-test/: Cargo.toml  TODO.md
dict-test/src/: main.rs
jolt/: .envrc  .gdbinit  CMakeLists.txt  Cargo.toml  app.overlay  b-jolt3-mez-2040.sh  b-proto4.sh  build.rs  check.sh  gdb.sh  justfile  prj.conf
jolt-embassy-rp/: .gdbinit  Cargo.toml  DESIGN.md  build.rs  justfile  memory.x  pool-sizes.py
jolt-embassy-rp/.cargo/: config.toml
jolt-embassy-rp/src/: board.rs  dispatch.rs  inter.rs  inter_uart.rs  leds.rs  logging_defmt.rs  logging_log.rs  main.rs  matrix.rs  minder.rs  translate.rs  usb.rs
jolt-embassy-rp/src/leds/: led_strip.rs  manager.rs
jolt/bbqboards/boards/pimoroni/tiny_2040/: Kconfig.pimoroni_tiny_2040  pimoroni_tiny_2040-pinctrl.dtsi  pimoroni_tiny_2040.dts  pimoroni_tiny_2040.yaml  pimoroni_tiny_2040_defconfig
jolt/bbqboards/boards/shields/highboard/: highboard.overlay
jolt/bbqboards/boards/shields/jolt1/: jolt1.overlay
jolt/bbqboards/boards/shields/jolt2/: jolt2.overlay
jolt/bbqboards/boards/shields/jolt2dir/: Kconfig.shield  jolt2dir.overlay
jolt/bbqboards/boards/shields/jolt3_mez_2040/: Kconfig.shield  jolt3_mez_2040.overlay
jolt/bbqboards/boards/shields/proto2/: proto2.overlay
jolt/bbqboards/boards/shields/proto3/: proto3.overlay
jolt/bbqboards/boards/shields/proto4/: Kconfig.defconfig  proto4.overlay
jolt/bbqboards/dts/bindings/: bbq,board-info.yaml  bbq,gpio-mode-selector.yaml  bbq,keyboard-matrix.yaml  vendor-prefixes.txt
jolt/bbqboards/zephyr/: module.yml
jolt/src/: devices.rs  dispatch.rs  heapinfo.c  heartbeat.c  inter.rs  keyminder.rs  leds.rs  lib.rs  logging.rs  mapping.rs  matrix.rs  pwm.c  translate.rs  usb.c  usbd_support.c  usbd_support.h
jolt/src/devices/: usb.rs
jolt/src/leds/: led_strip.rs  manager.rs  pwm.rs
keyminder/: Cargo.toml
keyminder/src/: main.rs
minder/: Cargo.toml
minder/src/: cobs.rs  decode.rs  encode.rs  lib.rs
minder/src/decode/: hid.rs  serial.rs
minder/src/encode/: hid.rs  serial.rs
prefix-search/: Cargo.toml
prefix-search/src/: main.rs
proto/: Cargo.toml  Makefile  debug.gdb
proto/.cargo/: config.toml
proto/src/: board.rs  inter.rs  leds.rs  main.rs  matrix.rs  steno.rs  usb.rs
proto/src/board/: proto2.rs  proto3.rs
proto/src/inter/: serialize.rs
proto/src/usb/: typer.rs
splay/: Package.swift
splay/Sources/Steno/: stroke.swift
splay/Sources/typey/: main.swift  rawMode.swift
splay/Tests/StenoTests/: StenoTests.swift
src/: inter.rs  leds.rs  main.rs  matrix.rs  steno.rs  usb.rs
src/inter/: serialize.rs
src/steno/: stroke.rs
typey/: Cargo.toml
typey/src/: main.rs  rtfcre.rs
zbbq/: .gdbinit  .gitignore  CMakeLists.txt  Cargo.toml  app.overlay  build.rs  justfile  prj.conf
zbbq/.cargo/: config.toml
zbbq/bbqboards/boards/shields/proto2/: proto2.overlay
zbbq/bbqboards/boards/shields/proto3/: proto3.overlay
zbbq/bbqboards/boards/shields/proto4/: proto4.overlay
zbbq/bbqboards/dts/bindings/: bbq-kbd-matrix.yaml
zbbq/bbqboards/zephyr/: module.yml
zbbq/src/: devices.rs  gpios.c  inter.rs  leds.c  leds.rs  lib.rs  main.c  matrix.rs  uart.c  usb.c  wrappers.c  zephyr.rs
zbbq/src/zephyr/: alloc.rs  channel.rs  critical.rs  log.rs  struct_check.rs  sync.rs  timer.rs
zephyr-play/: CMakeLists.txt  prj.conf
zephyr-play/.cargo/: config.toml
zephyr-play/boards/: pimoroni_tiny_2040.overlay  sparkfun_pro_micro_rp2040.overlay
