[package]
name = "bbq-keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = { version = "0.5", default-features = false }
arrayvec = { version = "0.7", default-features = false }

crc = "3.0"
defmt = "0.3"
smart-leds = "0.3"
usb-device = "0.2"
usbd-human-interface-device = "0.4"

bbq-steno = { version = "0.1", default-features = false, path = "../bbq-steno" }
bbq-steno-macros = { version = "0.1", path = "../bbq-steno-macros", default-features = false }

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.20"

[features]
default = ["std"]
std = []
