[package]
name = "bbq-steno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
arrayvec = { version = "0.7", default-features = false }
safe-regex = "0.2.5"

# TODO: Featurize log.
log = "0.4.20"

# We use serde and ciborium, which should support no-std.
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
ciborium = { version = "0.2", default-features = false }
ciborium-io = { version = "0.2", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = []

# Optimize the tests so they don't take too long
[profile.test]
opt-level = 3
