[package]
name = "bbq-steno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
arrayvec = { version = "0.7", default-features = false }
safe-regex = "0.2.5"
heapless = "0.8"

# TODO: Featurize log.
log = "0.4.20"

minicbor = { version = "0.25.1", features = ["alloc", "derive"] }

[dev-dependencies]
anyhow = "1.0"
bbq-steno-macros = { version = "0.1.0", path = "../bbq-steno-macros" }
serde_json = "1.0"
env_logger = "0.11"

[features]
default = ["std"]
std = []

# Optimize the tests so they don't take too long
[profile.test]
opt-level = 3
