[package]
name = "dict-convert"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
json = "0.12.4"
serde_derive = "1.0.189"
serde_json = "1.0.107"

bbq-steno = { version = "0.1.0", path = "../bbq-steno" }
bbq-steno-macros = { version = "0.1.0", path = "../bbq-steno-macros" }
primal = "0.3.2"
rand = "0.8.5"
byteorder = "1.5.0"

[build-dependencies]
build-data = "0"
