# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "A sample hello world application in Rust"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["executor-zephyr", "time-driver"] }
critical-section = "1.1.2"
log = "0.4.22"
rgb = "0.8.50"
arraydeque = { version = "0.5", default-features = false }
static_cell = "2.1"

[dependencies.embassy-executor]
version = "0.7.0"
features = [
  "log",
  "task-arena-size-2048",
]

[dependencies.embassy-futures]
version = "0.1.1"

[dependencies.embassy-sync]
version = "0.6.2"

[dependencies.embassy-time]
version = "0.4.0"
features = ["tick-hz-10_000"]

[dependencies.bbq-keyboard]
version = "0.1.0"
default-features = false
features = ["log"]
path = "../bbq-keyboard"

[dependencies.bbq-steno]
version = "0.1.0"
default-features = false
path = "../bbq-steno"
features = ["log"]

[dependencies.minder]
version = "0.1.0"
default-features = false
path = "../minder"

[profile.dev]
opt-level = 1

[profile.release]
# debug-assertions = true
# overflow-checks = true
debug = true

[build-dependencies]
zephyr-build = "0.1.0"

[features]
proto2 = ["bbq-keyboard/proto2"]
proto3 = ["bbq-keyboard/proto3"]

# TODO: This needs to come from the build.
# More TODO: This needs to be dynamic.
default = ["proto3"]
