[package]
name = "minder"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.20" }

minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
bbq-steno = { version = "0.1", default-features = false, path = "../bbq-steno" }
crc = "3.2"
heapless = "0.8.0"
defmt = { version = "0.3", optional = true }

[features]
default = ["std"]
std = []
