[package]
edition = "2021"
name = "proto"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
# defmt-serial = "0.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
# rp-pico = "0.7"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
sparkfun-pro-micro-rp2040 = "0.7"
embedded-alloc = "0.5.0"
fugit = "0.3.7"
nb = "1.0"
frunk = { version = "0.4", default-features = false }
arraydeque = { version = "0.5", default-features = false }
arrayvec = { version = "0.7", default-features = false }

crc = "3.0"

ws2812-pio = "0.7"
smart-leds = "0.3"

# USB Hid
# usbd-hid = "0.6"
usb-device = "0.2"
usbd-human-interface-device = "0.4"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.2"

# Child crates containing the implementation.
bbq-keyboard = { version = "0.1.0", default-features = false, path = "../bbq-keyboard" }
bbq-steno = { version = "0.1.0", default-features = false, path = "../bbq-steno" }
bbq-steno-macros = { version = "0.1.0", default-features = false, path = "../bbq-steno-macros" }
rp2040-boot2 = "0.3.0"

[features]
# The proto2 keyboard
proto2 = ["bbq-keyboard/proto2"]

# The proto3 keyboard
proto3 = ["bbq-keyboard/proto3"]

# For convenience, default to the board I use the most.
default = ["proto3"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
