[package]
name = "kbbq"
version = "0.1.0"
edition = "2021"
description = "Keyboard firmware on top of Zephyr"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "2.4"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_xoshiro]
version = "0.6"
default-features = false

[dependencies.bbq-keyboard]
version = "0.1.0"
default-features = false
path = "../bbq-keyboard"

[dependencies.bbq-steno]
version = "0.1.0"
default-features = false
path = "../bbq-steno"

[dependencies.critical-section]
version = "1.1.2"
# This is specified by the implementation.
features = ["restore-state-u32"]

[dependencies.arraydeque]
version = "0.5"
default-features = false

# Optimize even for debug builds.
[profile.dev]
opt-level = "s"

[features]
proto2 = ["bbq-keyboard/proto2"]

# TODO: This needs to come from the cmake build.
default = ["proto2"]
